[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemigo tierra/enemigo_tierra.png" type="Texture" id=1]
[ext_resource path="res://Enemigo tierra/enemigo_tierra(muerte).png" type="Texture" id=2]
[ext_resource path="res://Ecenas/enemigos/enemigo_tierra.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 38 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "runX2",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=19]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 33.5, 1.5 )

[node name="enemigo_tierra" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -7 )
frames = SubResource( 17 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="Ray1" type="RayCast2D" parent="."]
cast_to = Vector2( 80, 0 )

[node name="Ray2" type="RayCast2D" parent="."]
cast_to = Vector2( -50, 0 )

[node name="Ray3" type="RayCast2D" parent="."]
position = Vector2( 10, 6 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 43.5, 0 )
shape = SubResource( 20 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
